--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "concurrently 'trunk serve' 'yarn tailwind:dev'",
-    "tailwind:dev": "npx tailwindcss -i ./styles/global.css -o ./styles/tailwind.css --watch",
-    "tailwind:prod": "NODE_ENV=production npx tailwindcss -i ./styles/global.css -o ./styles/tailwind.css --minify"
+    "tailwind:dev": "tailwindcss -i ./styles/global.css -o ./styles/tailwind.css --watch",
+    "tailwind:prod": "NODE_ENV=production tailwindcss -i ./styles/global.css -o ./styles/tailwind.css --minify"
   },
-  "dependencies": {},
   "devDependencies": {
-    "concurrently": "^7.0.0",
-    "tailwindcss": "^3.0.22"
+    "concurrently": "^7.4.0",
+    "tailwindcss": "^3.1.8"
   }
 }
