--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
   "name": "beats",
-  "version": "1.0.0",
-  "author": "Marcus Lee <marcustutorial@hotmail.com>",
-  "license": "MIT",
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "dev": "run-s dev:*",
-    "dev:tailwind": "tailwindcss -i ./styles/global.css -o ./styles/tailwind.css --watch",
-    "dev:trunk": "trunk serve",
-    "build": "run-p build:*",
-    "build:trunk": "trunk build --release",
-    "build:tailwind": "NODE_ENV=production tailwindcss -i ./styles/global.css -o ./styles/tailwind.css --minify"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
+  "license": "MIT",
   "devDependencies": {
-    "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.1.8"
+    "@iconify-json/mdi": "^1.1.33",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.23.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-solid": "^0.7.3",
+    "prettier": "^2.7.1",
+    "tailwind-merge": "^1.6.0",
+    "typescript": "^4.8.3",
+    "unplugin-icons": "^0.14.10",
+    "vite": "^3.0.9",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-solid": "^2.3.0",
+    "vite-plugin-windicss": "^1.8.7"
+  },
+  "dependencies": {
+    "solid-app-router": "^0.4.2",
+    "solid-js": "^1.5.6"
   }
 }
