--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.33",
+    "@tauri-apps/cli": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.23.1",
@@ -28,6 +29,7 @@
     "vite-plugin-windicss": "^1.8.7"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.1.0",
     "solid-app-router": "^0.4.2",
     "solid-js": "^1.5.6"
   }
